# car_detector

./: .dockerignore  .gitignore  README.md  car_detector.jmx  config.py  dao.py  dto.py  models.py  pyproject.toml  report.csv
alembic/: env.py
alembic/versions/: 3ab6feac85f1_data_mirgation.py  8d91b675e7f9_models_updated.py  a8372a82f969_models_created.py
api_service/: main.py
api_service/tests/: conftest.py  test_user.py
detector/: main.py  router.py  utils.py
detector/tests/: conftest.py  test_detector.py
docker/: .env  detector.docker  docker_compose.yml  image_processor.docker
image_processor/: main.py  processor.py  router.py
image_processor/tests/: conftest.py  test_image_processor.py
poetry_scripts/: utils.py
