[tool.poetry]
name = "car-detector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_scripts"}]

[tool.poetry.dependencies]
python = "3.11.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.4"}
alembic = "^1.9.4"
httpx = "^0.23.3"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 101
exclude = ".database"

[tool.poetry.scripts]
up = "poetry_scripts.utils:up"
down = "poetry_scripts.utils:down"